--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -1,4 +1,4 @@
-/*!
+.btn{margin-right:5px}.markedAsDone{text-decoration:line-through;color:#777}.tableActions{width:105px}.todoForm{padding-bottom:60px}/*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
